--- a/style.css
+++ b/style.css
@@ -15,10 +15,14 @@ a:link, a:visited{
 
 .sidebar {
   float: left;
-  width: 9em;
+  width: 7em;
+  height: 15em;
   padding: 3px 1.5em 10px 1.3em;
   position: absolute;
   color: #3168aa;
+  background: #5a90d1;
+  border: 3px solid white;
+  color: white;
 }
 
 .mainsection {
@@ -29,12 +33,12 @@ a:link, a:visited{
 
 .article {
   padding: 1.25em 1.5em 1.5em 1.5em;
-  border-left: 5px solid white;
+  border-left: 3px solid white;
   background: #5a90d1;
   line-height: 1.6;
   font-size: 0.875em;
-  border-top: 5px solid white;
-  border-bottom: 5px solid white;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
   color: white;
 }
 
@@ -53,6 +57,7 @@ a:link, a:visited{
   margin: 0 0 5px 15px;
   text-align: left;
 }
+
 
 .contentsPanel {
   border: 1px solud #a2a9b1;
