--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a:link, a:visited{
 }
 
 .sidebar {
+  margin: 0 0 0 1em;
   float: left;
   width: 7em;
   height: 15em;
@@ -32,6 +33,7 @@ a:link, a:visited{
 
 
 .article {
+  margin: 0 1em 1em 2em;
   padding: 1.25em 1.5em 1.5em 1.5em;
   border-left: 3px solid white;
   background: #5a90d1;
@@ -39,6 +41,7 @@ a:link, a:visited{
   font-size: 0.875em;
   border-top: 3px solid white;
   border-bottom: 3px solid white;
+  border-right: 3px solid white;
   color: white;
 }
 
